# menu-processing

./: .env.example  .gitignore  README.md  notebook.ipynb  pyproject.toml
data/: solution_1_descriptions.json  solution_1_translation.json  solution_2_descriptions.json  solution_2_translation.json
