[tool.poetry]
name = "prompting-test"
version = "0.1.0"
description = ""
authors = ["Makar Savchenko <smakar20001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"
backoff = "^2.2.1"
openai = "^1.59.6"
tqdm = "^4.67.1"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
